--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
-            <a class="mr-5 hover:text-white">Home</a>
-            <a class="mr-5 hover:text-white">About Me</a>
-            <a class="mr-5 hover:text-white">Shop with Us</a>
-            <a class="hover:text-white">Gallery</a>
+            <a class="font-bold mr-5 hover:text-white">Home</a>
+            <a class="font-bold mr-5 hover:text-white">About Me</a>
+            <a class="font-bold mr-5 hover:text-white">Shop with Us</a>
+            <a class="font-bold hover:text-white">Gallery</a>
           </nav>
           <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-white lg:items-center lg:justify-center mb-4 md:mb-0">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
